@@ -3,17 +3,20 @@
 #include <ctype.h>
 #include <errno.h>
 
+#ifndef NEED_RUNLEVELS_DEF
+#define NEED_RUNLEVELS_DEF
+#endif
 #include "listing.h"
 
 
 int map_has_runlevels(void)
 {
-    return RUNLEVLES;
+    return RUNLEVELS;
 }
 
 char map_runlevel_to_key(const int runlevel)
 {
-    if (runlevel >= RUNLEVLES) {
+    if (runlevel >= RUNLEVELS) {
         error("Wrong runlevel %d\n", runlevel);
     }
     return runlevel_locations[runlevel].key;
@@ -23,7 +26,7 @@ ushort map_key_to_lvl(const char key)
 {
     int runlevel;
     const char uckey = toupper(key);
-    for (runlevel = 0; runlevel < RUNLEVLES; runlevel++) {
+    for (runlevel = 0; runlevel < RUNLEVELS; runlevel++) {
         if (uckey == runlevel_locations[runlevel].key)
             return runlevel_locations[runlevel].lvl;
     }
@@ -33,7 +36,7 @@ ushort map_key_to_lvl(const char key)
 
 const char *map_runlevel_to_location(const int runlevel)
 {
-    if (runlevel >= RUNLEVLES) {
+    if (runlevel >= RUNLEVELS) {
         error("Wrong runlevel %d\n", runlevel);
     }
     return runlevel_locations[runlevel].location;
@@ -41,7 +44,7 @@ const char *map_runlevel_to_location(const int runlevel)
 
 ushort map_runlevel_to_lvl(const int runlevel)
 {
-    if (runlevel >= RUNLEVLES) {
+    if (runlevel >= RUNLEVELS) {
         error("Wrong runlevel %d\n", runlevel);
     }
     return runlevel_locations[runlevel].lvl;
